--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="./usda-food-database-complete.js"></script>
+   <script src="comprehensive-global-foods-database.js"></script>
+   <script src="optimized-food-search-integration.js"></script>
+   <script src="github-deployment-ready-integration.js"></script>
   </body>
 </html>
